ga2 q17: rotate localtunnel URL and return plain email text

--- a/ga2/q17/index.html
+++ b/ga2/q17/index.html
@@ -1,18 +1,1 @@
-﻿<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GA2 Q17 localtunnel</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 2rem; }
-    .box { max-width: 720px; border: 1px solid #ccc; border-radius: 10px; padding: 1.25rem; }
-  </style>
-</head>
-<body>
-  <div class="box">
-    <h1>GA2 Q17: localtunnel</h1>
-    <p>23f3001415@ds.study.iitm.ac.in</p>
-  </div>
-</body>
-</html>
+23f3001415@ds.study.iitm.ac.in
